<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <EditText
            android:id="@+id/etName"
            android:autofillHints=""
            android:hint="@string/enter_name"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:layout_marginBottom="16dp"/>
        <EditText
            android:id="@+id/etPhone"
            android:autofillHints=""
            android:hint="@string/enter_phone"
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/etEmail"
            android:autofillHints=""
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"/>

        <Button
            android:id="@+id/btnViewData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_saved_data"
            android:layout_marginTop="24dp"/>

    </LinearLayout>

</ScrollView>
